--- a/my-turborepo/apps/api/package.json
+++ b/my-turborepo/apps/api/package.json
@@ -18,6 +18,7 @@
     "@repo/logger": "workspace:*",
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0"
